kubernetes_manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: concert-svc
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: concert-app
  type: NodePort
